--- a/index.html
+++ b/index.html
@@ -9,8 +9,33 @@
   <body>
     <h1>Gestão de Estoque - Amarte</h1>
 
-    <!-- Formulário para Adicionar Itens ao Estoque -->
-    <div class="section">
+    <!-- Guia para navegação -->
+    <div class="tabs">
+      <button class="tab-button" onclick="openTab(event, 'estoque')">
+        Itens em Estoque
+      </button>
+      <button class="tab-button" onclick="openTab(event, 'adicionar')">
+        Adicionar Item
+      </button>
+      <button class="tab-button" onclick="openTab(event, 'registrar-venda')">
+        Registrar Venda
+      </button>
+      <button class="tab-button" onclick="openTab(event, 'vendas-registradas')">
+        Vendas Registradas
+      </button>
+      <button class="tab-button" onclick="openTab(event, 'saldos')">
+        Saldos
+      </button>
+    </div>
+
+    <!-- Seção Itens em Estoque -->
+    <div id="estoque" class="tab-content">
+      <h2>Itens Disponíveis em Estoque</h2>
+      <ul id="estoque-lista"></ul>
+    </div>
+
+    <!-- Seção Adicionar Itens -->
+    <div id="adicionar" class="tab-content">
       <h2>Adicionar Item ao Estoque</h2>
       <form id="form-adicionar-item">
         <label for="descricao">Descrição:</label>
@@ -22,21 +47,15 @@
         <label for="valorCusto">Valor de Custo:</label>
         <input type="number" id="valorCusto" step="0.01" required />
         <br />
-        <label for="margemLucro">Margem de Lucro (%):</label>
-        <input type="number" id="margemLucro" step="0.01" required />
+        <label for="valorVenda">Valor de Venda:</label>
+        <input type="number" id="valorVenda" step="0.01" required />
         <br />
         <button type="submit">Adicionar Item</button>
       </form>
     </div>
 
-    <!-- Seção para Mostrar Itens em Estoque -->
-    <div class="section">
-      <h2>Itens Disponíveis em Estoque</h2>
-      <ul id="estoque-lista"></ul>
-    </div>
-
-    <!-- Seção para Registrar Vendas -->
-    <div class="section">
+    <!-- Seção Registrar Venda -->
+    <div id="registrar-venda" class="tab-content">
       <h2>Registrar Venda</h2>
       <form id="form-registrar-venda">
         <label for="itemVenda">Item:</label>
@@ -52,14 +71,14 @@
       </form>
     </div>
 
-    <!-- Seção para Mostrar Vendas Registradas -->
-    <div class="section">
+    <!-- Seção Vendas Registradas -->
+    <div id="vendas-registradas" class="tab-content">
       <h2>Vendas Registradas</h2>
       <ul id="vendas-lista"></ul>
     </div>
 
-    <!-- Seção para Mostrar Saldos -->
-    <div class="section">
+    <!-- Seção Saldos -->
+    <div id="saldos" class="tab-content">
       <h2>Saldos</h2>
       <p id="saldo-estoque">Saldo de Estoque: R$ 0.00</p>
       <p id="saldo-vendas">Saldo de Vendas (Lucro Real): R$ 0.00</p>
