Adicionado abas de navegação para organizar a pagina

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Gestão de Estoque - Amarte</h1>
+    <h1>Gestão de Estoque</h1>
 
     <!-- Guia para navegação -->
     <div class="tabs">
